# MyGame

./: .directory  CMakeLists.txt  README  README~  config.lua  config.lua~  game  safarix.kdev4  sprite.lua  sprite.lua~
.kdev4/: safarix.kdev4
data/: .directory  1.lvl  1.lvl~  2.lvl
data/pic/: .directory  atlas.xcf
include/: Aabb.hpp  Aabb.hpp~  App.hpp  App.hpp~  Consts.hpp  Consts.hpp~  Engine.hpp  Engine.hpp~  Entity.hpp  Entity.hpp~  Game.hpp  Game.hpp~  Heders.hpp  Heders.hpp~  Level.hpp  Level.hpp~  Leveling.hpp  Leveling.hpp~  Lua.hpp  Lua.hpp~  Menu.hpp  Menu.hpp~  MenuData.hpp  MenuData.hpp~  Player.hpp  Player.hpp~  PlayerPrototype.hpp  PlayerPrototype.hpp~  ProgressBar.hpp  ProgressBar.hpp~  Renderer.hpp  Renderer.hpp~  Sounder.hpp  Sounder.hpp~  Sprite.hpp  Sprite.hpp~  SpriteConfig.hpp  SpriteConfig.hpp~  SpriteGrid.hpp  SpriteGrid.hpp~  (+4 more)
src/: Aabb.cpp  Aabb.cpp~  App.cpp  App.cpp~  CMakeLists.txt  CMakeLists.txt~  Engine.cpp  Engine.cpp~  Entity.cpp  Entity.cpp~  Game.cpp  Game.cpp~  GlobFun.cpp  GlobFun.cpp~  Level.cpp  Level.cpp~  Leveling.cpp  Leveling.cpp~  Lua.cpp  Lua.cpp~  Menu.cpp  Menu.cpp~  MenuData.cpp  MenuData.cpp~  Player.cpp  Player.cpp~  ProgressBar.cpp  ProgressBar.cpp~  Renderer.cpp  Renderer.cpp~  Sounder.cpp  Sounder.cpp~  Sprite.cpp  Sprite.cpp~  SpriteConfig.cpp  SpriteConfig.cpp~  SpriteGrid.cpp  SpriteGrid.cpp~  Treasure.cpp  Treasure.cpp~  (+4 more)
